--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/toxicity"></script>
 
-    <title>Predict Toxic Comments</title>
+    <title>RCWELL 1.0 - Predict Toxic Comments</title>
   </head>
   <body>
     <h1 class="text-center mt-5 mb-5">Toxic Comments</h1>
