--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>RCWELL 1.0 - Predict Toxic Comments</title>
   </head>
   <body>
-    <h1 class="text-center mt-5 mb-5">Toxic Comments</h1>
+    <h1 class="text-center mt-5 mb-5">Predict MY Comments</h1>
     <div class="container w-50">
       <form id="classify">
         <div class="mb-3">
