--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <h1 class="text-center mt-5 mb-5">Predict MY Comments</h1>
-    <div class="container w-50">
+    <div class="container">
       <form id="classify">
         <div class="mb-3">
           <label for="comment" class="form-label"
