--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
         </tbody>
       </table>
 
+      <h4>7 Classification of Toxic Comments</h4>
+      <ol>
+        <li>Attack</li>
+        <li>Insult</li>
+        <li>Obscene</li>
+        <li>Severe Toxicity</li>
+        <li>Sexual Explicit</li>
+        <li>Threat</li>
+        <li>Toxicity</li>
+      </ol>
+
       <h4 class="mt-5 mb-3">Sample Text To Test</h4>
       <ul>
         <li>
